- Initial version of webapp working with Tika component