@@ -28,6 +28,60 @@
   <properties>
    <wicket.version>1.4.17</wicket.version>
   </properties>    
+  <build>
+        <resources>
+            <resource>
+                <filtering>false</filtering>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <filtering>false</filtering>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**</include>
+                </includes>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <filtering>false</filtering>
+                <directory>src/test/java</directory>
+                <includes>
+                    <include>**</include>
+                </includes>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </testResource>
+        </testResources>  
+    <plugins>
+        <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <port>8181</port>
+                <systemProperties>
+                    <CATALINA_OPTS>-Djava.awt.headless=true -Dfile.encoding=UTF-8
+                                    -server -Xms1536m -Xmx1536m
+                                    -XX:NewSize=256m -XX:MaxNewSize=256m -XX:PermSize=256m
+                                    -XX:MaxPermSize=512m -XX:+DisableExplicitGC
+                                    -XX:+UseConcMarkSweepGC
+                                    -XX:+CMSIncrementalMode
+                                    -XX:+CMSIncrementalPacing
+                                    -XX:CMSIncrementalDutyCycleMin=0
+                                    -XX:-TraceClassUnloading
+                    </CATALINA_OPTS>
+                </systemProperties>
+                <contextFile>${basedir}/src/main/webapp/META-INF/context.xml</contextFile>
+                <path>/${project.build.finalName}</path>  
+            </configuration>        
+        </plugin>    
+    </plugins>
+  </build>  
   <dependencies>
     <dependency>
         <groupId>org.apache.wicket</groupId>
@@ -67,12 +121,17 @@
       <groupId>org.shangridocs</groupId>
       <artifactId>shangridocs-webcomponents</artifactId>
       <version>0.1-SNAPSHOT</version> 
-    </dependency>
+    </dependency>  
 	<dependency>
 	    <groupId>javax.servlet</groupId>
-	    <artifactId>javax.servlet-api</artifactId>
-	    <version>3.1.0</version>
+	    <artifactId>servlet-api</artifactId>
+	    <version>2.4</version>
 	    <scope>provided</scope>
-	</dependency>   	 
+	</dependency>   	
+    <dependency>
+       <groupId>org.reflections</groupId>
+       <artifactId>reflections</artifactId>
+       <version>0.9.9-RC1</version>
+    </dependency>	 
   </dependencies>
 </project>
